2004-10-26  Andrew Pinski  <pinskia@physics.uc.edu>

	PR 18162
	* c-parse.in (designator): Finish with a semi-colon.

2004-10-26  Fariborz Jahanian <fjahanian@apple.com>

        * config/rs6000/rs6000.md (andsi3_internal8): Set CR when splitting 
        into rotlsi3.

2004-10-26  Kazu Hirata  <kazu@cs.umass.edu>

	* stmt.c (expand_case): Remove code to handle SWITCH_EXPR with
	a default case only.

2004-10-26  Aldy Hernandez  <aldyh@redhat.com>

	* config/rs6000/rs6000.c (rs6000_hard_regno_nregs): Adjust for
	e500 doubles.
	(spe_build_register_parallel): New.
	(rs6000_spe_function_arg): Handle e500 doubles.
	(function_arg): Same.
	(spe_func_has_64bit_regs_p): Same.
	(rs6000_function_value): Same.
	(rs6000_libcall_value): Same.
	(legitimate_lo_sum_address_p): Return false for e500 doubles.

	* config/rs6000/rs6000.h (LOCAL_ALIGNMENT): Adjust for e500
	doubles.
	(DATA_ALIGNMENT): Same.
	(CANNOT_CHANGE_MODE_CLASS): Same.

2004-10-26  Aldy Hernandez  <aldyh@redhat.com>

        * expr.c (emit_group_load): Handle floats.
        (emit_group_store): Same.

2004-10-26  Nathan Sidwell  <nathan@codesourcery.com>

	* c-lex.c (get_nonpadding_token): Remove.
	(c_lex_with_flags): Push timevar and eat padding here.  Improve
	stray token diagnostic.
	(lex_string): Replace logic with switch statement, eat padding
	token here.

2004-10-26  Geoffrey Keating  <geoffk@apple.com>

	PR 18149
	* config/i386/darwin.h (ASM_SPEC): Undef it before defining.

2004-10-25  Geoffrey Keating  <geoffk@apple.com>

	* config/darwin.h (LINK_SPEC): Default weak_reference_mismatches
	to 'non-weak'.
	(MAKE_DECL_ONE_ONLY): Set DECL_WEAK.
	(ASM_MAKE_LABEL_LINKONCE): Delete.
	(ASM_WEAKEN_DECL): New.
	(ASM_DECLARE_OBJECT_NAME): Look at DECL_WEAK not DECL_ONE_ONLY.
	(ASM_DECLARE_FUNCTION_NAME): Likewise.
	(TEXT_SECTION_ASM_OP): Add a tab.
	(DATA_SECTION_ASM_OP): Likewise.
	(SECTION_FUNCTION): Add a tab.  Use fputs.  Don't call
	data_section on every section change.